apps/monitoring/speedtest-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker
  namespace: monitoring
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - speedtest.phoenyxlab.xyz
  rules:
    - host: speedtest.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  number: 80
